--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,20 +1,21 @@
-{"name": "Rentacargo",
-    "short_name": "Rentacargo",
+{"name": "intranet",
+    "short_name": "intranet",
     "theme_color": "#222831",
     "background_color": "#ffad17",
     "display": "standalone",
-    "start_url": ".",
+    "start_url": "index.html",
     "icons": [{
-        "src": "images/image.png",
-        "sizes": "512x512",
-        "type": "image/png"
+      "src": "images/image.png",
+      "sizes": "512x512",
+      "type": "image/png"
     },{
-        "src": "images/icon.png",
-        "sizes": "144x144",
-        "type": "image/png"
-    }],
-    "related_applications": [{
-        "platform": "play",
-        "url": "false"
-    }]
-}
+      "src": "images/icon.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "images/android.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+     ]}
