--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,21 +1,21 @@
 {"name": "intranet",
     "short_name": "intranet",
+    "display": "standalone",
     "theme_color": "#222831",
     "background_color": "#ffad17",
-    "display": "standalone",
     "start_url": "index.html",
     "icons": [{
-      "src": "images/image.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    },{
-      "src": "images/icon.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "images/android.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-     ]}
+        "src": "logos/logo.png",
+        "sizes": "512x512",
+        "type": "image/png"
+      },{
+        "src": "logos/logo144.png",
+        "sizes": "144x144",
+        "type": "image/png"
+      },
+      {
+        "src": "logos/logo192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+    }]
+}
